--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "author": "Gonzalo Martos",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.18.2",
         "express": "^4.16.2",
-        "mongoose": "^5.0.1"
+        "jsonwebtoken": "^8.1.1",
+        "mongoose": "^5.0.1",
+        "mongoose-unique-validator": "^2.0.0"
     },
     "devDependencies": {
         "eslint-config-standard": "^11.0.0-beta.0",
